--- a/index.html
+++ b/index.html
@@ -1,26 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title> Desafio Alura+Google </title>
 </head>
+
 <body>
-        <header>
-            <h1>
-                Tipos de caixas de som
-            </h1>
-        </header>
-        <main>
-            <section>
+    <header>
+        <h1>
+            Tipos de caixas de som
+        </h1>
+    </header>
+    <main>
+        <section class="main">
             <input type="text" placeholder="Tipos de caixa">
             <button>Procurar</button>
-            </section>
-        </main>
-        <footer>
-            <p> 2024 - santos.1408@gmail.com</p>
-        </footer>
-
+        </section>
+        <section class="resultados-pesquisa">
+            <div class="item-resultado">
+                <h2>
+                    <a href="https://pt.wikipedia.org/wiki/Caixa_ac%C3%BAstica" target="_blank" rel="noopener noreferrer"> O
+                        que são?
+                    </a>
+                </h2>
+                <p class="descricao-meta">
+                    "Caixas de som são dispositivos que transformam sinais elétricos em ondas sonoras, permitindo que
+                    ouçamos músicas, filmes e outros conteúdos audiovisuais. Elas são compostas por um ou mais
+                    alto-falantes, que vibram em resposta ao sinal elétrico, e uma caixa acústica, que amplifica e
+                    direciona o som."
+                </p>
+                <a href="https://mis-sp.org.br/" target="_blank" rel="noopener noreferrer"> Museu do Som e Imagem 
+                </a>
+            </div>
+            
+        </section>
+    </main>
+    <footer>
+        <p> 2024 - santos.1408@gmail.com</p>
+    </footer>
+    <script src="app.js"></script>
 </body>
+
 </html>
