--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     <footer>
         <p> 2024 - santos.1408@gmail.com</p>
     </footer>
+    <script src="dados.js"></script>
     <script src="app.js"></script>
+    
 </body>
 
 </html>
