Introduzido funcao ao botao de pesquisa pelo app do javascript

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <main>
         <section class="main">
             <input type="text" placeholder="Tipos de caixa">
-            <button>Procurar</button>
+            <button onclick="pesquisar()">Procurar</button>
         </section>
-        <section class="resultados-pesquisa">
-            <div class="item-resultado">
-                <h2>
+        <section class="resultados-pesquisa"
+                    id="resultados-pesquisa">
+                <!<div class="item-resultado">
+                <!-- <h2>
                     <a href="https://pt.wikipedia.org/wiki/Caixa_ac%C3%BAstica" target="_blank" rel="noopener noreferrer"> O
                         que são?
                     </a>
@@ -33,8 +34,8 @@
                     direciona o som."
                 </p>
                 <a href="https://mis-sp.org.br/" target="_blank" rel="noopener noreferrer"> Museu do Som e Imagem 
-                </a>
-            </div>
+                </a> -->
+            <!/div>
             
         </section>
     </main>
