Adicionado a funçao de pesquisa

--- a/index.html
+++ b/index.html
@@ -16,15 +16,29 @@
     </header>
     <main>
         <section class="main">
-            <input type="text" placeholder="Tipos de caixa">
-            <button onclick="pesquisar()">Procurar</button>
+
+            <input 
+            type="text" 
+            placeholder="Tipos de caixa" 
+            id = "campoPesquisa">
+
+            <button
+             onclick="pesquisar()">Procurar
+            </button>
+
         </section>
-        <section class="resultados-pesquisa"
-                    id="resultados-pesquisa">
+
+        <section 
+        class="resultadosPesquisa"
+        id="resultadosPesquisa">
         </section>
+
     </main>
+
     <footer>
+
         <p> 2024 - santos.1408@gmail.com</p>
+
     </footer>
     <script src="dados.js"></script>
     <script src="app.js"></script>
